--- a/login/templates/login/new.html
+++ b/login/templates/login/new.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}HoverCraft | Sign In{% endblock %}
+{% block title %}HoverCraft | Register{% endblock %}
 {% block content %}
 <form action="{% url "login:create" %}" method="post">{% csrf_token %}
     <input type="text" name="name"> <label>Username</label><br />
