--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,10 @@
 #contentarea  {
     font-family: 'Open Sans', sans-serif;
-    margin = 15px;
-    padding = 10px;
-    background = #eee;
+    margin = 10px;
+    padding = 3px;
+    background = #000;
+}
+
+.standard-form {
+    display: inline-block;
 }
